--- a/src/styles/themes/classic.theme.scss
+++ b/src/styles/themes/classic.theme.scss
@@ -4,104 +4,86 @@
 @use "sass:map";
 @use "@angular/material" as mat;
 
-// Note: Color palettes are generated from primary: #0fb6cd, secondary: #e9925c
-$_palettes: (
+// Note: Color palettes are generated from primary: #12d4ed, tertiary: #ed8012, neutral: #788082
+$palettes: (
   primary: (
     0: #000000,
-    10: #001f25,
+    10: #001f24,
     20: #00363e,
-    25: #00424c,
+    25: #00424b,
     30: #004e59,
-    35: #005b68,
-    40: #006876,
-    50: #008394,
-    60: #009fb4,
-    70: #20bcd3,
-    80: #4ed7ef,
-    90: #a1efff,
-    95: #d4f7ff,
+    35: #005b67,
+    40: #006875,
+    50: #008393,
+    60: #009fb3,
+    70: #00bcd3,
+    80: #24d9f3,
+    90: #9eefff,
+    95: #d2f7ff,
     98: #eefcff,
     99: #f7fdff,
     100: #ffffff,
   ),
   secondary: (
     0: #000000,
-    10: #321200,
-    20: #522300,
-    25: #632b00,
-    30: #743504,
-    35: #824010,
-    40: #914c1c,
-    50: #b06332,
-    60: #ce7c48,
-    70: #ee9660,
-    80: #ffb68c,
-    90: #ffdbc9,
-    95: #ffede5,
-    98: #fff8f5,
-    99: #fffbff,
-    100: #ffffff,
-  ),
-  tertiary: (
-    0: #000000,
-    10: #30004a,
-    20: #491666,
-    25: #552472,
-    30: #62307f,
-    35: #6f3c8b,
-    40: #7c4999,
-    50: #9662b3,
-    60: #b27bcf,
-    70: #ce95ec,
-    80: #e6b4ff,
-    90: #f5d9ff,
-    95: #fcebff,
-    98: #fff7fc,
-    99: #fffbff,
+    10: #001f24,
+    20: #00363e,
+    25: #02424b,
+    30: #154e57,
+    35: #245963,
+    40: #32666f,
+    50: #4c7f88,
+    60: #6699a3,
+    70: #81b3be,
+    80: #9ccfd9,
+    90: #b7ebf6,
+    95: #d2f7ff,
+    98: #eefcff,
+    99: #f7fdff,
     100: #ffffff,
   ),
   neutral: (
     0: #000000,
-    10: #171d1e,
-    20: #2b3133,
-    25: #363c3e,
-    30: #424849,
-    35: #4d5355,
-    40: #595f61,
-    50: #72787a,
-    60: #8c9293,
-    70: #a6acae,
-    80: #c2c7c9,
-    90: #dee3e5,
-    95: #ecf2f3,
-    98: #f5fafc,
-    99: #f8fdff,
+    10: #151d1f,
+    20: #2a3234,
+    25: #353d3f,
+    30: #40484a,
+    35: #4c5456,
+    40: #586062,
+    50: #70787a,
+    60: #8a9294,
+    70: #a5adaf,
+    80: #c0c8ca,
+    90: #dce4e6,
+    95: #eaf2f4,
+    98: #f3fbfd,
+    99: #f7fdff,
     100: #ffffff,
-    4: #090f10,
-    6: #0e1416,
-    12: #1b2122,
-    17: #252b2c,
-    22: #303637,
-    24: #343a3c,
-    87: #d5dbdc,
-    92: #e3e9eb,
-    94: #e9eff0,
-    96: #eff5f6,
+    4: #080f11,
+    6: #0d1516,
+    12: #192123,
+    17: #242b2d,
+    22: #2e3638,
+    24: #333a3c,
+    87: #d3dbdd,
+    92: #e2eaec,
+    94: #e7eff1,
+    96: #edf5f7,
   ),
   neutral-variant: (
     0: #000000,
-    10: #111d20,
-    20: #263235,
-    25: #313d40,
+    10: #101e20,
+    20: #253335,
+    25: #303e40,
     30: #3c494c,
-    35: #485557,
-    40: #546163,
-    50: #6c797c,
-    60: #869396,
-    70: #a0aeb1,
-    80: #bcc9cc,
-    90: #d7e5e8,
-    95: #e6f3f6,
+    35: #475558,
+    40: #536164,
+    50: #6b797d,
+    60: #859396,
+    70: #9faeb1,
+    80: #bbc9cc,
+    90: #d6e5e8,
+    95: #e5f3f7,
     98: #eefcff,
     99: #f7fdff,
     100: #ffffff,
@@ -124,14 +106,77 @@ $_palettes: (
     99: #fffbff,
     100: #ffffff,
   ),
+  primary-alt: (
+    0: #000000,
+    10: #2f1400,
+    20: #4e2500,
+    25: #5f2f00,
+    30: #703800,
+    35: #814200,
+    40: #934b00,
+    50: #b76000,
+    60: #dd7500,
+    70: #ff8e25,
+    80: #ffb781,
+    90: #ffdcc4,
+    95: #ffede3,
+    98: #fff8f5,
+    99: #fffbff,
+    100: #ffffff,
+  ),
+  secondary-alt: (
+    0: #000000,
+    10: #2f1400,
+    20: #4d2602,
+    25: #5b310b,
+    30: #693c16,
+    35: #764720,
+    40: #84532b,
+    50: #a16b41,
+    60: #be8458,
+    70: #dc9e6f,
+    80: #fab988,
+    90: #ffdcc4,
+    95: #ffede3,
+    98: #fff8f5,
+    99: #fffbff,
+    100: #ffffff,
+  ),
+  neutral-variant-alt: (
+    0: #000000,
+    10: #27180d,
+    20: #3e2d21,
+    25: #4a382b,
+    30: #564336,
+    35: #624e41,
+    40: #6f5a4c,
+    50: #897363,
+    60: #a48c7c,
+    70: #c0a695,
+    80: #ddc1b0,
+    90: #faddcb,
+    95: #ffede3,
+    98: #fff8f5,
+    99: #fffbff,
+    100: #ffffff,
+  ),
 );
 
 $_rest: (
-  secondary: map.get($_palettes, secondary),
-  neutral: map.get($_palettes, neutral),
-  neutral-variant: map.get($_palettes, neutral-variant),
-  error: map.get($_palettes, error),
+  secondary: map.get($palettes, secondary),
+  neutral: map.get($palettes, neutral),
+  neutral-variant: map.get($palettes, neutral-variant),
+  error: map.get($palettes, error),
 );
 
-$primary-palette: map.merge(map.get($_palettes, primary), $_rest);
-$tertiary-palette: map.merge(map.get($_palettes, tertiary), $_rest);
+$_rest-alt: (
+  secondary: map.get($palettes, secondary-alt),
+  neutral: map.get($palettes, neutral),
+  neutral-variant: map.get($palettes, neutral-variant-alt),
+  error: map.get($palettes, error),
+);
+
+$primary-palette-alt: map.merge(map.get($palettes, primary-alt), $_rest-alt);
+$tertiary-palette-alt: map.merge(map.get($palettes, primary), $_rest-alt);
+$primary-palette: map.merge(map.get($palettes, primary), $_rest);
+$tertiary-palette: map.merge(map.get($palettes, primary-alt), $_rest);
