--- a/src/app/util/tooltip/tooltip.component.html
+++ b/src/app/util/tooltip/tooltip.component.html
@@ -11,5 +11,8 @@
     left: tooltipPosition.left + 'px',
   }"
 >
-  <ng-container *ngTemplateOutlet="tooltipContent"></ng-container>
+  <ng-container
+    *ngTemplateOutlet="tooltipContent"
+    class="tooltip-content"
+  ></ng-container>
 </div>
