--- a/src/styles/app-theme.scss
+++ b/src/styles/app-theme.scss
@@ -30,6 +30,7 @@
       background-color: $value;
     }
   }
+
   .alternate {
     @include mat.theme(
       (
@@ -186,14 +187,14 @@
   @include mat.theme($christmas);
 }
 
-// .christmas {
-//   @include mat.theme(
+// @include mat.autocomplete-overrides(
 //     (
-//       color: (
-//         primary: christmas.$primary-palette,
-//         tertiary: christmas.$tertiary-palette,
-//         theme-type: light,
-//       ),
+//       background-color: var(--mat-sys-primary-container),
 //     )
 //   );
-// }
+
+//   @include mat.form-field-overrides(
+//     (
+//       filled-container-color: var(--mat-sys-primary-container),
+//     )
+//   );
